# team-activity-monitor

./: .env.example  .flaskenv  Dockerfile  README.md  pyproject.toml  requirements.txt
src/: activity_monitor_flask_shell_ctx.py  config.py
src/app/: __init__.py
src/app/client/: __init__.py  async_github.py  async_jira.py  github.py  jira.py
src/app/errors/: __init__.py  handlers.py
src/app/main/: __init__.py  activity_service.py  async_activity_service.py  forms.py  query_parser.py  response_templates.py  routes.py
src/app/templates/: base.html  index.html
src/app/templates/errors/: 404.html
src/cli/: monitor.py
src/config/: config.py
src/utils/: logging_utils.py  references.py
test/app/: test_config.py
test/app/client/: test_async_github_client.py  test_async_jira_client.py  test_github_client.py  test_jira_client.py
test/app/main/: test_activity_service.py  test_query_parser.py
