[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "team-activity-monitor"
version = "0.1.0"
description = "A Flask application for monitoring team activity across GitHub and Jira"
authors = [{name = "Arthur Vargas", email = "arthurvargasdev@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers", 
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "flask>=2.0.0",
    "flask-babel>=2.0.0",
    "flask-wtf>=1.1.0",
    "wtforms>=3.0.0",
    "aiohttp>=3.8.0",
    "pytest>=6.0.0",
    "pytest-asyncio>=0.21.0", 
    "openai>=1.0.0",
    "langdetect>=1.0.9",
    "python-dotenv>=0.19.0",
    "gunicorn>=20.1.0",
    "gevent>=22.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0", 
    "flake8>=4.0.0",
    "mypy>=0.910",
]

[project.urls]
Homepage = "https://github.com/ahvar/team-activity-monitor"
Repository = "https://github.com/ahvar/team-activity-monitor"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[project.scripts]
team-monitor = "src.activity_monitor_flask_shell_ctx:main"

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''